--- a/a.css
+++ b/a.css
@@ -28,18 +28,24 @@ h1,h2,h3,h4,h5,h6{
   clear: both;
 }
 
+.loadWrap{ width: 100%; height: 100%; position: fixed; top: 0; left: 0;}
+
 .topNavBar {
   padding: 20px 0 20px 0;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  color: #b7b7b7;
+
+  transition: all .5s;
+  /* transition: all .5s; 是重点 */
 }
 .topNavBar-inner {
   padding: 0 16px;
 }
 .topNavBar nav {
-  padding-top: 7px;
+  padding-top: 4px;
 }
 .topNavBar nav > ul {
   list-style: none;
@@ -50,20 +56,23 @@ h1,h2,h3,h4,h5,h6{
   float: left;
   margin-left: 17px;
   margin-right: 17px;
+  position: relative;
 }
 .topNavBar nav > ul > li > a {
   font-size: 12px;
-  color: #b7b7b7;
+  color: inherit;
   font-weight: bold;
   border-top: 3px solid transparent;
   border-bottom: 3px solid transparent;
   padding-top: 5px;
   padding-bottom: 5px;
   display: block;
+
+  position: relative;
 }
-.topNavBar nav > ul > li > a:hover {
+/* .topNavBar nav > ul > li > a:hover {
   border-bottom: 3px solid #e06567;
-}
+} */
 
 .topNavBar .logo {
   font-size: 24px;
