滑动弹出动画

--- a/a.css
+++ b/a.css
@@ -28,6 +28,18 @@ h1,h2,h3,h4,h5,h6{
   clear: both;
 }
 
+[data-x].active{
+  outline: 1px solid pink; 
+}
+
+[data-x].offset{
+  transform: translateY(300px);
+}
+[data-x]{
+  transform: translateY(0);
+  transition: all 0.3s;
+}
+
 .loadWrap{ width: 100%; height: 100%; position: fixed; top: 0; left: 0;}
 
 .topNavBar {
@@ -210,6 +222,8 @@ body > main .downloadResume:hover {
   font-size: 18px;
 }
 
+
+
 section.skills,
 section.portfolio{
   max-width: 940px;
@@ -250,12 +264,18 @@ section.skills .progressBar {
   background: #FAE1E1;
   border-radius: 2px;
   margin: 4px 0 40px;
+  overflow: hidden;
 }
 section.skills .progressBar > .progress {
   height: 100%;
   background: #E6686A;
   width: 70%;
   border-radius: 2px;
+  transform: translateX(0);
+  transition: all .7s;
+}
+section.skills.offset .progress{
+  transform: translateX(-50%);
 }
 
 section.portfolio {
