--- a/a.css
+++ b/a.css
@@ -2,148 +2,41 @@ body {
   background: #efefef;
   margin: 0;
 }
-a {
-  color: inherit;
-  text-decoration: none;
-}
-* {
-  margin: 0;
-  padding: 0;
-}
-hr {
-  height: 0;
-  border: none;
-  border-top: 1px solid #dedede;
-}
+a { color: inherit; text-decoration: none; }
+* { margin: 0; padding: 0; }
+hr { height: 0; border: none; border-top: 1px solid #dedede; }
 ul,
-ol {
-  list-style: none;
-}
-h1,h2,h3,h4,h5,h6{
-  font-weight: normal;
-}
-.clearfix::after {
-  content: '';
-  display: block;
-  clear: both;
-}
+ol { list-style: none; }
+h1,h2,h3,h4,h5,h6{ font-weight: normal; }
+.clearfix::after { content: ''; display: block; clear: both; }
 
-[data-x].active{
-  outline: 1px solid pink; 
-}
 
-[data-x].offset{
-  transform: translateY(300px);
-}
-[data-x]{
-  transform: translateY(0);
-  transition: all 0.3s;
-}
+[data-x].offset{ transform: translateY(300px); }
+[data-x]{ transform: translateY(0); transition: all 0.3s; }
 
 .loadWrap{ width: 100%; height: 100%; position: fixed; top: 0; left: 0;}
 
-.topNavBar {
-  padding: 20px 0 20px 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  color: #b7b7b7;
-
-  transition: all .5s;
-  /* transition: all .5s; 是重点 */
-}
-.topNavBar-inner {
-  padding: 0 16px;
-}
-.topNavBar nav {
-  padding-top: 4px;
-}
-.topNavBar nav > ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.topNavBar nav > ul > li {
-  float: left;
-  margin-left: 17px;
-  margin-right: 17px;
-  position: relative;
-}
-.topNavBar nav > ul > li > a {
-  font-size: 12px;
-  color: inherit;
-  font-weight: bold;
-  border-top: 3px solid transparent;
-  border-bottom: 3px solid transparent;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  display: block;
-
-  position: relative;
-}
+.topNavBar { padding: 20px 0 20px 0; position: fixed; top: 0; left: 0; width: 100%; color: #b7b7b7; transition: all .5s; /* transition: all .5s; 是重点 */ }
+.topNavBar-inner { padding: 0 16px; }
+.topNavBar nav { padding-top: 4px; }
+.topNavBar nav > ul { list-style: none; margin: 0; padding: 0; }
+.topNavBar nav > ul > li { float: left; margin-left: 17px; margin-right: 17px; position: relative; }
+.topNavBar nav > ul > li > a { font-size: 12px; color: inherit; font-weight: bold; border-top: 3px solid transparent; border-bottom: 3px solid transparent; padding-top: 5px; padding-bottom: 5px; display: block; position: relative; }
 /* .topNavBar nav > ul > li > a:hover {
   border-bottom: 3px solid #e06567;
 } */
 
-.topNavBar .logo {
-  font-size: 24px;
-  font-family: 'Arial Black';
-  padding-top: 3px;
-  padding-bottom: 4px;
-}
-.topNavBar .logo .rs {
-  margin-right: 4px;
-  color: #e6686a;
-}
-.topNavBar .logo .card {
-  color: #9a9da2;
-}
-.banner {
-  height: 515px;
-  background-image: url(./img/rs-cover.jpg);
-  background-position: center center;
-  background-size: cover;
-}
-.banner .mask {
-  height: 515px;
-  background-color: rgba(0, 0, 0, 0.8);
-}
+.topNavBar .logo { font-size: 24px; font-family: 'Arial Black'; padding-top: 3px; padding-bottom: 4px; }
+.topNavBar .logo .rs { margin-right: 4px; color: #e6686a; }
+.topNavBar .logo .card { color: #9a9da2; }
+.banner { height: 515px; background-image: url(./img/rs-cover.jpg); background-position: center center; background-size: cover; }
+.banner .mask { height: 515px; background-color: rgba(0, 0, 0, 0.8); }
 
-.userCard {
-  max-width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #ffffff;
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
-}
-.userCard .welcome {
-  background: #e6686a;
-  color: white;
-  display: inline-block;
-  padding: 4px 16px;
-  line-height: 22px;
-  position: relative;
-  margin-bottom: 10px;
-}
-.userCard .welcome .triangle {
-  display: block;
-  border: 10px solid transparent;
-  width: 0px;
-  border-left-color: #e6686a;
-  border-top-width: 0px;
-  position: absolute;
-  left: 4px;
-  top: 100%;
-}
-.userCard .picture {
-  float: left;
-}
-.userCard .text {
-  float: left;
-  margin-left: 65px;
-  width: 470px;
-}
+.userCard { max-width: 940px; margin-left: auto; margin-right: auto; background-color: #ffffff; box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5); }
+.userCard .welcome { background: #e6686a; color: white; display: inline-block; padding: 4px 16px; line-height: 22px; position: relative; margin-bottom: 10px; }
+.userCard .welcome .triangle { display: block; border: 10px solid transparent; width: 0px; border-left-color: #e6686a; border-top-width: 0px; position: absolute; left: 4px; top: 100%; }
+.userCard .picture { float: left; }
+.userCard .text { float: left; margin-left: 65px; width: 470px; }
 .userCard .text h1 {
   margin-top: 18px;
 }
@@ -335,4 +228,20 @@ section.portfolio .works{
 section.portfolio .works > .big,
 section.portfolio .works > .small {
   position: absolute;
+}
+
+.swiper-container {
+    width: 760px;
+    height: 570px;
+}
+.swiper-wrapper{
+	margin: 28px 0;
+}
+.swiper-button-prev , .swiper-button-next{
+	margin: 20px -20px;
+	width: 66px;
+	height: 66px;
+	border-radius: 50%;
+	background: pink;
+	color: white;
 }
