--- a/a.css
+++ b/a.css
@@ -242,6 +242,6 @@ section.portfolio .works > .small {
 	width: 66px;
 	height: 66px;
 	border-radius: 50%;
-	background: pink;
+	background: #e6686a;
 	color: white;
 }
